--- a/front_end/jurassic-park/public/css/styles.css
+++ b/front_end/jurassic-park/public/css/styles.css
@@ -31,6 +31,14 @@ body {
   display: flex;
 }
 
+.main-container {
+  display: flex;
+  flex-direction: row;
+  border: 1px solid black;
+  margin: 10px;
+  padding: 20px;
+}
+
 .component {
   border: 1px solid black;
   margin: 10px;
@@ -58,4 +66,12 @@ a {
 
 h3 {
   text-align: center;
+}
+
+.dinosaur-container {
+  flex-direction: row;
+}
+
+.paddock-container {
+  flex-direction: row;
 }
