--- a/front_end/jurassic-park/public/css/styles.css
+++ b/front_end/jurassic-park/public/css/styles.css
@@ -2,7 +2,7 @@
   display: inline;
 }
 header {
-  background-color: white;
+  background-color: 	#f7f7ed;
   position: fixed;
   top: 0;
   left: 0;
@@ -10,6 +10,8 @@ header {
   height: 80px;
   display: flex;
   align-items: center;
+  display: flex;
+  justify-content: space-around;;
 }
 header * {
   display: inline;
@@ -24,6 +26,8 @@ header li {
 body {
   height: 125vh;
   font-family: sans-serif;
+  background-image: url("http://getwallpapers.com/wallpaper/full/b/1/1/151233.jpg");
+  height: 100%;
 }
 #root {
   margin-top: 80px;
@@ -37,6 +41,8 @@ body {
   border: 1px solid black;
   margin: 10px;
   padding: 20px;
+  background-color: #f7f7ed;
+  margin: auto;
 }
 
 .component {
