--- a/front_end/jurassic-park/public/css/styles.css
+++ b/front_end/jurassic-park/public/css/styles.css
@@ -24,7 +24,7 @@ header li {
   margin: 20px;
 }
 body {
-  height: 125vh;
+  height: 100%;
   font-family: sans-serif;
   background-image: url("../images/jurassic_park_jungle_island.jpg");
   background-size: cover;
@@ -38,18 +38,19 @@ body {
 
 .main-container {
   display: flex;
-  width: 100%;
+  width: 96%;
   position: fixed;
-  justify-content: space-evenly;
-
+  justify-content: space-between;
+  margin-top: 50px;
 }
 
 .component {
   border: 1px solid black;
   margin: auto;
   padding: 20px;
-  background-color: #f7f7ed;
+  background-color: white;
   border-radius: 20px;
+  padding-top: 0px;
 }
 
 li {
@@ -82,7 +83,7 @@ h3 {
   border-radius: 20px;
   margin: auto;
   padding: 10px;
-  background-color: white;
+  background-color: #f7f7ed;
 }
 
 .paddock-container {
@@ -91,7 +92,7 @@ h3 {
   border-radius: 20px;
   margin: auto;
   padding: 10px;
-  background-color: white;
+  background-color: #f7f7ed;
 }
 
 .form {
@@ -105,5 +106,17 @@ h3 {
 
 .container-list {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
+}
+
+#chart_div {
+  padding-top: 20px;
+}
+
+#element {
+  background-color: white;
+}
+
+#stats, #dinosaur-details, #dashboard-container, #paddock-details {
+  background-color: #f7f7ed;
 }
