--- a/front_end/jurassic-park/public/css/styles.css
+++ b/front_end/jurassic-park/public/css/styles.css
@@ -67,6 +67,22 @@ a {
 }
 
 .buttons {
+
+
+
+}
+.button{
+
+  border: none;
+  color: white;
+  background-color: red;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
