fix before submitting

--- a/front_end/jurassic-park/public/css/styles.css
+++ b/front_end/jurassic-park/public/css/styles.css
@@ -138,3 +138,13 @@ h3 {
   min-width: 160px;
   height: fit-content;
 }
+
+#curve-chart {
+  height: 500px;
+  width: 900px;
+  margin: auto;
+}
+
+#dashboard-container {
+  width: 100%;
+}
