--- a/front_end/jurassic-park/public/css/styles.css
+++ b/front_end/jurassic-park/public/css/styles.css
@@ -47,7 +47,7 @@ body {
 
 .component {
   border: 1px solid black;
-  margin: 10px auto;
+  margin: 20px auto;
   padding: 20px;
   background-color: white;
   border-radius: 20px;
@@ -138,4 +138,10 @@ h3 {
 #stats {
   min-width: 160px;
   height: fit-content;
+}
+
+button:hover {
+  background-color: black;
+  color:  #d1c4b4;
+  border-radius: 4px;
 }
