--- a/front_end/jurassic-park/public/css/styles.css
+++ b/front_end/jurassic-park/public/css/styles.css
@@ -12,6 +12,7 @@ header {
   align-items: center;
   display: flex;
   justify-content: space-evenly;
+  border-bottom: 1px solid black;
 }
 header * {
   display: inline;
