--- a/front_end/jurassic-park/public/css/styles.css
+++ b/front_end/jurassic-park/public/css/styles.css
@@ -92,7 +92,7 @@ h3 {
   border: 1px solid black;
   border-radius: 8px;
   margin: 20px;
-  padding: 10px 0 0 0;
+  padding: 10px;
   background-color: #d1c4b4;
   height: fit-content;
   width: fit-content;
