unified the css tag for dinosaur and paddock elements

--- a/front_end/jurassic-park/public/css/styles.css
+++ b/front_end/jurassic-park/public/css/styles.css
@@ -87,7 +87,7 @@ h3 {
   text-align: center;
 }
 
-.dinosaur-container {
+.dinosaur-paddock-container {
   flex-direction: row;
   border: 1px solid black;
   border-radius: 8px;
@@ -98,7 +98,7 @@ h3 {
   width: max-content;
 }
 
-.paddock-container {
+/* .paddock-container {
   flex-direction: row;
   border: 1px solid black;
   border-radius: 8px;
@@ -107,6 +107,10 @@ h3 {
   background-color: #d1c4b4;
   height: max-content;
   width: max-content;
+} */
+
+.main-container-element {
+
 }
 
 .form {
