--- a/front_end/jurassic-park/public/css/styles.css
+++ b/front_end/jurassic-park/public/css/styles.css
@@ -42,7 +42,7 @@ body {
   display: flex;
   width: 96%;
   position: fixed;
-  justify-content: space-between;
+  justify-content: space-around;
   margin-top: 50px;
 }
 
@@ -87,7 +87,7 @@ h3 {
   text-align: center;
 }
 
-.dinosaur-paddock-container {
+.dinosaur-container {
   flex-direction: row;
   border: 1px solid black;
   border-radius: 8px;
@@ -95,10 +95,10 @@ h3 {
   padding: 10px;
   background-color: #d1c4b4;
   height: max-content;
-  width: max-content;
+  max-width: 28%;
 }
 
-/* .paddock-container {
+.paddock-container {
   flex-direction: row;
   border: 1px solid black;
   border-radius: 8px;
@@ -106,11 +106,7 @@ h3 {
   padding: 10px;
   background-color: #d1c4b4;
   height: max-content;
-  width: max-content;
-} */
-
-.main-container-element {
-
+  max-width: 28%;
 }
 
 .form {
