--- a/front_end/jurassic-park/public/css/styles.css
+++ b/front_end/jurassic-park/public/css/styles.css
@@ -55,6 +55,11 @@ body {
   padding-top: 0px;
 }
 
+.paddock-details-container, .dinosaur-details-container {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 li {
   list-style: none;
 }
