changed #element width css to 'max-content'

--- a/front_end/jurassic-park/public/css/styles.css
+++ b/front_end/jurassic-park/public/css/styles.css
@@ -140,14 +140,14 @@ h3 {
 
 #element {
   background-color: white;
-  width: min-content;
+  width: max-content;
 }
 
 #stats, #dinosaur-details, #dashboard-container, #paddock-details {
   background-color: #d1c4b4;
 }
 
-#dinosaur-details {
+#dinosaur-details, #paddock-details {
   width: min-content;
 }
 
